--- a/channels/index.html
+++ b/channels/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>RTC Channels</title>
+  <title>RTC Channel Dashboard</title>
   <link rel="stylesheet" href="/style.css">
   <style>
     body {
@@ -12,94 +12,92 @@
       font-family: Arial, sans-serif;
       margin: 0;
       padding: 0;
+      display: flex;
+      flex-direction: column;
+      height: 100vh;
     }
-
     header {
       background-color: #1a1a1a;
-      padding: 20px 0;
-      font-size: 2rem;
+      padding: 20px;
+      font-size: 1.8rem;
       font-weight: bold;
       text-align: center;
       border-bottom: 2px solid #333;
     }
-
     main {
-      padding: 30px;
-    }
-
-    .description {
-      text-align: center;
-      color: #aaa;
-      margin-bottom: 40px;
-    }
-
-    .channel {
-      margin: 60px auto;
-      width: 90%;
-      max-width: 1000px;
-      background: linear-gradient(180deg, #141414, #0f0f0f);
-      border-radius: 16px;
-      padding: 30px;
-      box-shadow: 0 0 25px rgba(0, 0, 0, 0.6);
-      position: relative;
+      display: flex;
+      flex: 1;
       overflow: hidden;
-      animation: fadeIn 0.5s ease;
     }
-
-    .channel::before {
-      content: "";
-      position: absolute;
-      top: -20px;
-      left: 0;
-      width: 100%;
-      height: 6px;
-      background: linear-gradient(90deg, #4af, #00f, #4af);
-      background-size: 200% 100%;
-      animation: scrollLine 4s linear infinite;
+    #sidebar {
+      width: 280px;
+      background: #141414;
+      border-right: 2px solid #333;
+      padding: 20px;
+      overflow-y: auto;
     }
-
-    @keyframes scrollLine {
-      from { background-position: 200% 0; }
-      to { background-position: -200% 0; }
-    }
-
-    .channel h2 {
-      font-size: 2rem;
-      text-transform: uppercase;
+    #sidebar h2 {
       text-align: center;
-      margin-bottom: 20px;
-      letter-spacing: 1px;
       color: #4af;
-      text-shadow: 0 0 10px #4af5;
+      margin-bottom: 15px;
+    }
+    .channel-btn {
+      display: block;
+      background: #1e1e1e;
+      color: #ddd;
+      padding: 10px 15px;
+      margin: 8px 0;
+      border-radius: 8px;
+      cursor: pointer;
+      border: 1px solid #2a2a2a;
+      transition: background 0.2s, transform 0.2s;
+    }
+    .channel-btn:hover {
+      background: #4af3;
+      color: #fff;
+      transform: translateX(3px);
+    }
+    .channel-btn.active {
+      background: #4af;
+      color: #000;
+      font-weight: bold;
+    }
+    #viewer {
+      flex: 1;
+      background: #0f0f0f;
+      padding: 20px;
+      overflow-y: auto;
+    }
+    #viewer h2 {
+      font-size: 1.8rem;
+      color: #4af;
+      text-align: center;
       border-bottom: 2px solid #333;
       padding-bottom: 10px;
+      margin-bottom: 20px;
     }
-
-    .channel-content {
-      text-align: left;
-      line-height: 1.6;
-    }
-
-    @keyframes fadeIn {
-      from { opacity: 0; transform: translateY(20px); }
-      to { opacity: 1; transform: translateY(0); }
-    }
-
-    .divider {
-      height: 4px;
+    iframe {
       width: 100%;
-      background: linear-gradient(90deg, #333, #4af, #333);
-      margin: 80px 0;
-      border-radius: 10px;
+      height: calc(100vh - 180px);
+      border: none;
+      background: #111;
+      border-radius: 12px;
+      box-shadow: 0 0 15px rgba(0, 0, 0, 0.6);
     }
   </style>
 </head>
 <body>
-  <header>RTC Channels</header>
-  <main id="channelsContainer">
-    <p class="description">Below are all exported RTC channels:</p>
+  <header>RTC Channel Dashboard</header>
+  <main>
+    <div id="sidebar">
+      <h2>Channels</h2>
+      <div id="channelList"></div>
+    </div>
+    <div id="viewer">
+      <h2>Select a Channel</h2>
+      <iframe id="channelFrame"></iframe>
+    </div>
   </main>
-
   <script>
     const channames = [
       "TRUSTED.html",
@@ -117,40 +115,38 @@
       "staffupds.html",
       "strikes.html",
       "trusted info.html",
-      "verify logs.html",
+      "verify logs.html"
     ];
+    const listContainer = document.getElementById("channelList");
+    const frame = document.getElementById("channelFrame");
+    const viewerHeader = document.querySelector("#viewer h2");
 
-    async function loadChannels() {
-      const container = document.getElementById('channelsContainer');
-
-      for (let i = 0; i < channames.length; i++) {
-        const file = channames[i];
-        try {
-          const channelName = file.replace('.html', '');
-          const res = await fetch(file);
-          const html = await res.text();
-
-          const wrapper = document.createElement('div');
-          wrapper.className = 'channel';
-          wrapper.innerHTML = `
-            <h2>📢 ${channelName}</h2>
-            <div class="channel-content">${html}</div>
-          `;
-          container.appendChild(wrapper);
-
-          if (i < channames.length - 1) {
-            const divider = document.createElement('div');
-            divider.className = 'divider';
-            container.appendChild(divider);
-          }
-
-        } catch (err) {
-          console.error("\`Error loading \${file}:\`, err");
-        }
-      }
+    function openChannel(name) {
+      frame.src = name;
+      viewerHeader.textContent = `📢 ${name.replace(".html", "")}`;
+      document.querySelectorAll(".channel-btn").forEach(b => b.classList.remove("active"));
+      const btn = Array.from(document.querySelectorAll(".channel-btn")).find(b => b.textContent === name.replace(".html", ""));
+      if (btn) btn.classList.add("active");
+      localStorage.setItem("lastChannel", name);
     }
 
-    loadChannels();
+    channames.forEach(name => {
+      const btn = document.createElement("div");
+      btn.className = "channel-btn";
+      btn.textContent = name.replace(".html", "");
+      btn.addEventListener("click", () => openChannel(name));
+      listContainer.appendChild(btn);
+    });
+
+    const params = new URLSearchParams(window.location.search);
+    const initial = params.get("c");
+    const saved = localStorage.getItem("lastChannel");
+
+    if (initial && channames.includes(initial + ".html")) {
+      openChannel(initial + ".html");
+    } else if (saved && channames.includes(saved)) {
+      openChannel(saved);
+    }
   </script>
 </body>
 </html>
