--- a/channels/index.html
+++ b/channels/index.html
@@ -18,8 +18,8 @@
     }
     header {
       background-color: #1a1a1a;
-      padding: 20px;
-      font-size: 1.8rem;
+      padding: 15px;
+      font-size: 1.6rem;
       font-weight: bold;
       text-align: center;
       border-bottom: 2px solid #333;
@@ -28,33 +28,39 @@
       display: flex;
       flex: 1;
       overflow: hidden;
+      padding: 10px;
+      box-sizing: border-box;
+      gap: 10px;
     }
     #sidebar {
-      width: 280px;
+      width: 250px;
       background: #141414;
       border-right: 2px solid #333;
-      padding: 20px;
+      padding: 15px;
       overflow-y: auto;
+      border-radius: 10px;
     }
     #sidebar h2 {
       text-align: center;
       color: #4af;
-      margin-bottom: 15px;
+      margin-bottom: 10px;
+      font-size: 1.2rem;
     }
     .channel-btn {
       display: block;
       background: #1e1e1e;
       color: #ddd;
-      padding: 10px 15px;
-      margin: 8px 0;
+      padding: 8px 12px;
+      margin: 6px 0;
       border-radius: 8px;
       cursor: pointer;
       border: 1px solid #2a2a2a;
       transition: background 0.2s, transform 0.2s;
+      font-size: 0.95rem;
     }
     .channel-btn:hover {
       background: #4af3;
-      color: #fff;
+      color: #000;
       transform: translateX(3px);
     }
     .channel-btn.active {
@@ -65,23 +71,55 @@
     #viewer {
       flex: 1;
       background: #0f0f0f;
-      padding: 20px;
-      overflow-y: auto;
+      padding: 15px;
+      border-radius: 10px;
+      display: flex;
+      flex-direction: column;
+      overflow: hidden;
     }
     #viewer h2 {
-      font-size: 1.8rem;
+      font-size: 1.4rem;
       color: #4af;
       text-align: center;
       border-bottom: 2px solid #333;
-      padding-bottom: 10px;
-      margin-bottom: 20px;
+      padding-bottom: 8px;
+      margin-bottom: 8px;
+    }
+    #browser-controls {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 8px;
+      margin-bottom: 8px;
+    }
+    .browser-btn {
+      background: #1e1e1e;
+      color: #4af;
+      border: 1px solid #2a2a2a;
+      padding: 6px 10px;
+      border-radius: 6px;
+      cursor: pointer;
+      font-size: 1rem;
+      transition: all 0.2s;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+    .browser-btn:hover {
+      background: #4af;
+      color: #000;
+    }
+    .browser-btn svg {
+      width: 18px;
+      height: 18px;
+      fill: currentColor;
     }
     iframe {
       width: 100%;
-      height: calc(100vh - 180px);
+      flex: 1;
       border: none;
       background: #111;
-      border-radius: 12px;
+      border-radius: 10px;
       box-shadow: 0 0 15px rgba(0, 0, 0, 0.6);
     }
   </style>
@@ -95,27 +133,38 @@
     </div>
     <div id="viewer">
       <h2>Select a Channel</h2>
+      <div id="browser-controls">
+        <button class="browser-btn" id="backBtn" title="Back">
+          <svg viewBox="0 0 24 24"><path d="M15 18l-6-6 6-6"/></svg>
+        </button>
+        <button class="browser-btn" id="forwardBtn" title="Forward">
+          <svg viewBox="0 0 24 24"><path d="M9 6l6 6-6 6"/></svg>
+        </button>
+        <button class="browser-btn" id="refreshBtn" title="Refresh">
+          <svg viewBox="0 0 24 24"><path d="M17.65 6.35A7.95 7.95 0 0012 4V1l-4 4 4 4V5c3.31 0 6 2.69 6 6a6 6 0 01-6 6 6 6 0 01-5.65-4H4a8 8 0 007.65 8 8 8 0 007.65-8c0-2.11-.82-4.03-2.35-5.65z"/></svg>
+        </button>
+      </div>
       <iframe id="channelFrame"></iframe>
     </div>
   </main>
   <script>
     const channames = [
-      "TRUSTED.html",
-      "Update.html",
       "admin chat.html",
-      "admininfo.html",
-      "adminupds.html",
-      "deleted.html",
-      "logs.html",
-      "managerchat.html",
-      "modlogs.html",
-      "private chat.html",
-      "quarantine.html",
+      "admin info.html",
+      "admin upds.html",
       "staff chat.html",
-      "staffupds.html",
-      "strikes.html",
-      "trusted info.html",
-      "verify logs.html"
+      "staff upds.html",
+      "staff strikes.html",
+      "manager chat.html",
+      "manager cmds.html",
+      "modlogs.html",
+      "trusted chat.html",
+      "trusted upds.html",
+      "deleted msgs.html",
+      "message logs.html",
+      "verify logs.html",
+      "private event chat.html",
+      "closed quarantine ticket.html"
     ];
     const listContainer = document.getElementById("channelList");
     const frame = document.getElementById("channelFrame");
@@ -136,6 +185,16 @@
       btn.textContent = name.replace(".html", "");
       btn.addEventListener("click", () => openChannel(name));
       listContainer.appendChild(btn);
+    });
+
+    document.getElementById("refreshBtn").addEventListener("click", () => {
+      if (frame.src) frame.contentWindow.location.reload();
+    });
+    document.getElementById("backBtn").addEventListener("click", () => {
+      if (frame.contentWindow.history.length > 1) frame.contentWindow.history.back();
+    });
+    document.getElementById("forwardBtn").addEventListener("click", () => {
+      frame.contentWindow.history.forward();
     });
 
     const params = new URLSearchParams(window.location.search);
