--- a/channels/index.html
+++ b/channels/index.html
@@ -3,7 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>RTC Channel Dashboard</title>
+  <title>rtc channels</title>
+  <meta property="og:title" content="rtc channels" />
+  <meta property="og:url" content="https://burntribs24.github.io/channels/" />
+  <meta property="og:image" content="https://burntribs24.github.io/dude/ummmmmm.png" />
   <link rel="stylesheet" href="/style.css">
   <style>
     body {
