--- a/channels/index.html
+++ b/channels/index.html
@@ -7,6 +7,7 @@
   <meta property="og:title" content="rtc channels" />
   <meta property="og:url" content="https://burntribs24.github.io/channels/" />
   <meta property="og:image" content="https://burntribs24.github.io/dude/ummmmmm.png" />
+  <meta property="og:type" content="website">
   <link rel="stylesheet" href="/style.css">
   <style>
     body {
