--- a/channels/index.html
+++ b/channels/index.html
@@ -6,7 +6,7 @@
   <title>rtc channels</title>
   <meta property="og:title" content="rtc channels" />
   <meta property="og:url" content="https://burntribs24.github.io/channels/" />
-  <meta property="og:image" content="https://burntribs24.github.io/dude/ummmmmm.png" />
+  <meta property="og:description" content="whats up chat this website contains a ton of leaked channels inside of RTC (roblox trolling central) including manager level ones\n\ni'd recommend you take a look\n\nk cool bye" />
   <meta property="og:type" content="website">
   <link rel="stylesheet" href="/style.css">
   <style>
